<resources>
    <string name="app_name">QuotesApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Menu Text      -->
    <string name="menu_share_us">Share Us</string>
    <string name="menu_feedack">Feedback</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_more">More Apps</string>
    <string name="menu_rate_us">Rate Us</string>

    <string name="oops">OOPS !</string>
    <string name="network_disconnected">Network Disconnected</string>
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="failed_to_load_data">Network error. Try refreshing the page</string>
    <string name="images_quotes">Image Quotes</string>
    <string name="text_quotes">Text Quotes</string>
    <string name="copied">Copied</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="permission_needed">Permissions Needed</string>
    <string name="app_requires_some_permissions">App requires some permissions</string>
    <string name="permission_denied">Permissions denied</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="failed">Failed</string>
    <string name="downloading">Downloading</string>
    <string name="start">Start</string>
</resources>